--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "meshline": "^3.3.1",
     "motion": "^12.23.25",
